--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
              TS=$(date +%s)
              echo ${{ github.actor }}
-             docker build . --file docker/Dockerfile --tag gcr.io/philippeg-ligo/pe-viewer:${TS}
-             docker push gcr.io/philippeg-ligo/pe-viewer:${TS}
+             docker build . --file docker/Dockerfile --tag ghcr.io/philippeg-ligo/pe-viewer:${TS}
+             docker push ghcr.io/philippeg-ligo/pe-viewer:${TS}
