Dockerfile: missed the README file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.10
 
 COPY requirements.txt /tmp
-COPY *.py /app/
+COPY *.py README.md /app/
 WORKDIR /app
 RUN pip install -r /tmp/requirements.txt
 
