--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Build the Docker image
       run: |
              TS=$(date +%s)
-             echo ${{ github.actor }}
-             docker build . --file docker/Dockerfile --tag ghcr.io/philippeg-ligo/pe-viewer:${TS}
-             docker push ghcr.io/philippeg-ligo/pe-viewer:${TS}
+             TODAY=$(date +%y%m%d)
+             docker build . --file docker/Dockerfile \
+                            --tag ghcr.io/${{ github.actor }}/pe-viewer:${TS} \
+                            --tag ghcr.io/${{ github.actor }}/pe-viewer:${TODAY}
+             docker push ghcr.io/${{ github.actor }}/pe-viewer:${TS}
+             docker push ghcr.io/${{ github.actor }}/pe-viewer:${TODAY}
