update Dockerfile to install the img directory in container

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10
 
 COPY requirements.txt /tmp
 COPY *.py README.md /app/
+COPY img/* /app/img/
+
 WORKDIR /app
 RUN pip install -r /tmp/requirements.txt
 
