--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pe-viewer
-  namespace: igwn-pe-viewer
+  name: peviewer
 spec:
   type: ClusterIP
   selector:
-    app: pe-viewer
+    app: igwn-peviewer
   ports:
-    - name: http
-      port: 8501
+    - name: streamlit
+      port: 80
       protocol: TCP
-      targetPort: http
+      targetPort: streamlit
