kubernetes manifests (jkanner/pe-viewer:230113 image)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,5 +6,6 @@ COPY img/* /app/img/
 
 WORKDIR /app
 RUN pip install -r /tmp/requirements.txt
+RUN printf "\n\nBuild on $(date)\n" >> /app/README.md
 
 CMD [ "/usr/local/bin/streamlit", "run", "streamlit-app.py" ]
