adding cache directory

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,7 @@ RUN  useradd -s /usr/sbin/nologin -m -d /app peviewer
 # finish the install as peviewer, in their $HOME
 USER peviewer
 WORKDIR /app
+RUN mkdir -p .streamlit/cache/
 COPY --chown=peviewer *.py README.md /app/
 COPY --chown=peviewer img/* /app/img/
 
