--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: igwn-peviewer
-        image: ghcr.io/jkanner/pe-viewer:230210
+        image: ghcr.io/jkanner/pe-viewer:1676069281
         imagePullPolicy: IfNotPresent
         ports:
         - name: streamlit
