--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-numpy==1.23.5
+numpy==1.24.4
 streamlit==1.30.0
 gwosc==0.7.1
-gwpy
-pycbc
-pesummary==0.13.9
-seaborn==0.12.1
-healpy
+gwpy==3.0.8
+pesummary==1.2.0
+seaborn==0.12.2
+healpy==1.16.6
 ligo.skymap
-matplotlib==3.5.3
+matplotlib==3.7.3
 altair==4.2.2
-pandas==1.5.2
+pandas==2.2.1
